Add `selectClasspathResources(String...)` to discovery selectors (#5322)
Adds the array and list based equivalent of the singular
`selectClasspathResource`.

Additionally:
1. Replace `List.of` with `Arrays.asList` to prevent premature NPEs
   instead of failing preconditions.
2. Add and use `Preconditions.containsNoBlankElements` to catch
   collections with blank strings.